--- a/_clean/index.html
+++ b/_clean/index.html
@@ -46,12 +46,17 @@
     <header>
       <div class="cont-width">
         <img src="img/logo.png" alt="" class="logo">
-        <ul>
-          <li><a href="#">О нас</a></li>
-          <li><a href="#">Каталог</a></li>
-          <li><a href="#">Преимущества</a></li>
-          <li><a href="#">Отзывы</a></li>
-        </ul>
+        <nav class="menu">
+          <a href="#" id="pull">
+            <i class="fa fa-bars" aria-hidden="true"></i>
+          </a>
+          <ul>
+            <li><a href="#">О нас</a></li>
+            <li><a href="#">Каталог</a></li>
+            <li><a href="#">Преимущества</a></li>
+            <li><a href="#">Отзывы</a></li>
+          </ul>
+        </nav>
         <div class="phone">
           <i class="fa fa-mobile" aria-hidden="true"></i>
           <span>+7 (812) 644-41-08</span>
@@ -72,6 +77,229 @@
         </div>
       </div>
     </div>
-    <div class="projects-block"></div>
+    <div class="projects-block">
+      <h1 class="sec-head">Наши проекты</h1>
+      <hr class="red-line">
+      <div class="fp-wrap cont-width">
+        <div class="fp-item">
+          <img src="img/fp-img.jpg" alt="">
+          <h3>Валенсия</h3>
+          <div class="price-block">
+            <span class="price">12300 <i class="fa fa-rub" aria-hidden="true"></i></span>
+            <span class="aval">(в наличии)</span>
+          </div>
+          <hr>
+          <ul>
+            <li>
+              <span class="attr">Тип камина:</span>
+              <span class="value">Наружный</span>
+            </li>
+            <li>
+              <span class="attr">Стиль:</span>
+              <span class="value">Барокко</span>
+            </li>
+            <li>
+              <span class="attr">Материал:</span>
+              <span class="value">мрамор Crema Mafil</span>
+            </li>
+            <li>
+              <span class="attr">Способ обработки: </span>
+              <span class="value">мрамор Crema Mafil</span>
+            </li>
+            <li>
+              <span class="attr">Материал:</span>
+              <span class="value">мрамор Crema Mafil</span>
+            </li>
+            <li>
+              <span class="attr">Способ обработки: </span>
+              <span class="value">мрамор Crema Mafil</span>
+            </li>            
+          </ul>
+        </div>
+        <div class="fp-item">
+          <img src="img/fp-img.jpg" alt="">
+          <h3>Валенсия</h3>
+          <div class="price-block">
+            <span class="price">12300 <i class="fa fa-rub" aria-hidden="true"></i></span>
+            <span class="aval">(в наличии)</span>
+          </div>
+          <hr>
+          <ul>
+            <li>
+              <span class="attr">Тип камина:</span>
+              <span class="value">Наружный</span>
+            </li>
+            <li>
+              <span class="attr">Стиль:</span>
+              <span class="value">Барокко</span>
+            </li>
+            <li>
+              <span class="attr">Материал:</span>
+              <span class="value">мрамор Crema Mafil</span>
+            </li>
+            <li>
+              <span class="attr">Способ обработки: </span>
+              <span class="value">мрамор Crema Mafil</span>
+            </li>
+            <li>
+              <span class="attr">Материал:</span>
+              <span class="value">мрамор Crema Mafil</span>
+            </li>
+            <li>
+              <span class="attr">Способ обработки: </span>
+              <span class="value">мрамор Crema Mafil</span>
+            </li>            
+          </ul>
+        </div>
+        <div class="fp-item">
+          <img src="img/fp-img.jpg" alt="">
+          <h3>Валенсия</h3>
+          <div class="price-block">
+            <span class="price">12300 <i class="fa fa-rub" aria-hidden="true"></i></span>
+            <span class="aval">(в наличии)</span>
+          </div>
+          <hr>
+          <ul>
+            <li>
+              <span class="attr">Тип камина:</span>
+              <span class="value">Наружный</span>
+            </li>
+            <li>
+              <span class="attr">Стиль:</span>
+              <span class="value">Барокко</span>
+            </li>
+            <li>
+              <span class="attr">Материал:</span>
+              <span class="value">мрамор Crema Mafil</span>
+            </li>
+            <li>
+              <span class="attr">Способ обработки: </span>
+              <span class="value">мрамор Crema Mafil</span>
+            </li>
+            <li>
+              <span class="attr">Материал:</span>
+              <span class="value">мрамор Crema Mafil</span>
+            </li>
+            <li>
+              <span class="attr">Способ обработки: </span>
+              <span class="value">мрамор Crema Mafil</span>
+            </li>            
+          </ul>
+        </div>
+      </div>
+    </div>
+    <section class="about">
+      <div class="cont-width clearfix">
+        <h1>О нас</h1>
+        <p>Компания «Граон», работает с 2005 года на рынке натурального камня. На  сегодняшний день Компания располагает отлаженной системой поставок камня из всех регионов мира и производственными мощностями, позволяющими реализовать проект любого масштаба в срок и с надлежащим качеством.</p>
+        <img src="img/section-2-img.jpg" alt="">
+        <div class="about-right">
+          <h2>Мы предлагаем в качестве основы для сотрудничества <br>следующие услуги:</h2>
+          <ul>
+            <li> <i class="fa fa-circle" ></i> Комплексная поставка натурального камня в блоках, слэбах любой толщины и готовых изделиях по проекту заказчика</li>
+            <li><i class="fa fa-circle" ></i>Фасадные и интерьерные работы с использованием натурального камня.</li>
+            <li><i class="fa fa-circle" ></i>Изготовление  и монтаж высокохудожественных  элементов из натурального камня.</li>
+            <li><i class="fa fa-circle" ></i>Изготовление и монтаж мозаичных в римской и флорентийской техниках.</li>
+            <li><i class="fa fa-circle" ></i>Изготовление и монтаж декоративных  элементов из цветных металлов и нержавеющей стали.</li>
+            <li><i class="fa fa-circle" ></i>Реставрация изделий из натурального камня.</li>
+            <li><i class="fa fa-circle" ></i>Разработка проектно-конструкторской документации</li>
+            <li><i class="fa fa-circle" ></i>Разработка архитектурно – дизайнерских решений</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <section class="benefits">
+      <div class="cont-width clearfix">
+        <h1>Наши приимущества</h1>
+        <hr>
+        <div class="benef-item-wrap">
+          <div class="benef-item">
+            <div class="ben-icon">
+              <img src="img/bf-1.png" alt="">
+            </div>
+            <p>Обратившись к нам Вы получаете <br>подробную консультацию от специалиста</p>
+          </div>
+          <div class="benef-item">
+            <div class="ben-icon">
+              <img src="img/bf-2.png" alt="">
+            </div>
+            <p>Обратившись к нам Вы получаете <br>подробную консультацию от специалиста</p>
+          </div>
+          <div class="benef-item">
+            <div class="ben-icon">
+              <img src="img/bf-3.png" alt="">
+            </div>
+            <p>У нас работают только специалисты высокого уровня, профессионалы, проверенные на деле</p>
+          </div>
+          <div class="benef-item">
+            <div class="ben-icon">
+              <img src="img/bf-4.png" alt="">
+            </div>
+            <p>Обратившись к нам Вы получаете <br>подробную консультацию от специалиста</p>
+          </div>
+          <div class="benef-item">
+            <div class="ben-icon">
+              <img src="img/bf-5.png" alt="">
+            </div>
+            <p>У нас работают только специалисты высокого уровня, профессионалы, проверенные на деле</p>
+          </div>
+        </div>
+
+
+
+      </div>
+    </section>
+    <section class="feedback">
+      <div class="cont-width">
+        <h1>Отзывы наших клиентов</h1>
+        <hr>
+        <div class="fb-slider">
+          <div class="carousel-wrap" id="fb-carousel">
+            <div class="fb-item">
+              <div class="fb-img"></div>
+              <div>
+                <h2>Николай</h2>
+                <span>Москва</span>
+
+                <p>Нам делали мраморные подоконники и кухонную столешницу мы очень довольны качеством обслуживания. Доставлено всё в полном комплекте, работы проведены качественно и достаточно быстро. Очень Вам благодарны, спасибо за работу !</p>
+              </div>
+            </div>
+            <div class="fb-item">
+              <div class="fb-img"></div>
+              <h2>Николай</h2>
+              <span>Москва</span>
+              <p>Нам делали мраморные подоконники и кухонную столешницу мы очень довольны качеством обслуживания. Доставлено всё в полном комплекте, работы проведены качественно и достаточно быстро. Очень Вам благодарны, спасибо за работу !</p>
+            </div>
+          </div>
+
+          <i class="fa fa-chevron-left" id="fb-back" ></i>
+          <i class="fa fa-chevron-right" id="fb-next"></i>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="cont-width">
+        <div class="socials">
+          <a href="#"><img src="img/soc-vk.png" alt=""></a>
+          <a href="#"><img src="img/soc-fb.png" alt=""></a>
+          <a href="#"><img src="img/soc-tw.png" alt=""></a>
+        </div>
+        <ul class="menu">
+          <li><a href="#">О нас</a></li>
+          <li><a href="#">Каталог</a></li>
+          <li><a href="#">Приимущества</a></li>
+          <li><a href="#">Отзывы</a></li>
+        </ul>
+        <div class="contacts">
+          <i class="fa fa-mobile"></i>
+          <span class="phone-num">+7 (812) 644-41-08</span>
+          <br>
+          <div class="mail">
+            <i class="fa fa-envelope-o"></i>
+            <span class="email">graon@gmail.com</span>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
   </html>
